--- a/angular.json
+++ b/angular.json
@@ -21,12 +21,10 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "src/assets/pesoAcademia.jpg",
-              "src/assets/logoPowerGym.webp",
               {
                 "glob": "**/*",
                 "input": "public",
-                "output": "./"
+                "output": "/assets"
               }
             ],
             "styles": [
